# pdftotext

./: Cargo.toml  README.md  build.rs
poppler-20.12.1/: ChangeLog
poppler-20.12.1/glib/reference/html/: PopplerAction.html  PopplerAttachment.html  PopplerDocument.html  PopplerFormField.html  PopplerStructureElement.html  annotation-glossary.html  api-index-0-14.html  api-index-0-18.html  api-index-0-90.html  api-index-full.html  index.html  poppler-Poppler-Annotation.html  poppler-Poppler-Features.html  poppler-Poppler-Media.html  poppler-Poppler-Page.html  poppler.devhelp2  style.css
src/: callpoppler.cc  lib.rs
