[package]
name = "pdftotext"
version = "0.1.2"
authors = ["Elias Gabriel Amaral da Silva <tolkiendili@gmail.com>"]
edition = "2018"
license = "GPL-2.0 OR GPL-3.0"
readme = "README.md"
repository = "https://github.com/dlight/pdftotext"
homepage = "https://github.com/dlight/pdftotext"
documentation = "https://docs.rs/pdftotext"
description = """
High-level library that binds to Poppler to extract text from a PDF
"""
keywords = ["poppler", "pdf", "text"]
categories = ["api-bindings"]

[build-dependencies]
cc = "1.0"
pkg-config = "0.3"
